Some more work on HSIE Elements. Almost done with the core element.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -32,7 +32,8 @@ ADD_LIBRARY(Code
         SpaceTransformations/SpaceTransformation.cpp
         HSIEPreconditioner/HSIEPreconditioner.cpp
         HSIEPreconditioner/HSIESurface.cpp
-        HSIEPreconditioner/LaguerreFunction.cpp HSIEPreconditioner/LaguerreFunction.h)
+        HSIEPreconditioner/LaguerreFunction.cpp
+        HSIEPreconditioner/HSIEPolynomial.cpp)
 
 DEAL_II_SETUP_TARGET(Code)
 	
