Initial version of modesolver with Slepc

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -39,6 +39,8 @@ ADD_LIBRARY(Code
         Hierarchy/DofIndexData.cpp
         Hierarchy/LevelDofIndexData.h
         Hierarchy/LevelDofIndexData.cpp
+        ModalComputations/RectangularMode.h
+        ModalComputations/RectangularMode.cpp
         )
 
 DEAL_II_SETUP_TARGET(Code)
