--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -2,6 +2,7 @@ INCLUDE_DIRECTORIES(Core, Helpers, MeshGenerators, OptimizationAlgorithm, Optimi
 
 ADD_LIBRARY(Code
         Core/Sector.cpp
+        Core/FEDomain.cpp
         Core/SolutionWeight.cpp
         Core/InnerDomain.cpp
         Core/Types.h
