Reworking parts of the space transformation code to setup a new transformation type for 90 degree bends.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -24,6 +24,7 @@ ADD_LIBRARY(Code
         SpaceTransformations/DualProblemTransformationWrapper.cpp
         SpaceTransformations/HomogenousTransformationRectangular.cpp
         SpaceTransformations/InhomogenousTransformationRectangular.cpp
+        SpaceTransformations/BendTransformation.cpp
         SpaceTransformations/SpaceTransformation.cpp
         BoundaryCondition/JacobianForCell.cpp
         BoundaryCondition/DofData.cpp
