Added shape function implementation to replace manual implementations in space transformations. No more compiler warnings. Updated old tests. Added tests for shape functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ target_sources(waveguide_tests
         tests/ExactSolutionTests.cpp
         tests/HardyPolynomialTests.cpp
         tests/MeshTests.cpp
+        tests/ShapeFunctionTests.cpp
 )
 set_target_properties(waveguide_tests PROPERTIES
     COMPILE_FLAGS "${cxx_strict}"
